# wsc-zyte-demo

./: README.md  notes.md  output.json  pyproject.toml
base/: items.py  middlewares.py  settings.py
base/pages/: books_toscrape_com.py
base/spiders/: products.py
fixtures/base.pages.books_toscrape_com.BooksToscrapeComCategoryItemPage/test-1/: meta.json  output.json
fixtures/base.pages.books_toscrape_com.BooksToscrapeComCategoryItemPage/test-1/inputs/: HttpResponse-info.json
fixtures/base.pages.books_toscrape_com.BooksToscrapeComProductItemPage/test-1/: meta.json  output.json
fixtures/base.pages.books_toscrape_com.BooksToscrapeComProductItemPage/test-1/inputs/: HttpResponse-info.json
