[project]
name = "ext34"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "price-parser>=0.5.0",
    "pytest>=8.4.2",
    "scrapy>=2.13.3",
    "scrapy-poet>=0.26.0",
    "scrapy-zyte-api>=0.31.0",
    "zyte-common-items>=0.28.0",
]
